--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
   <header class="page-header">
     <nav>
-      <a href="/index.html" lang="en" class="logo-link">Web<span class="logo-header">Studio</span></a>
+      <a href="./index.html" lang="en" class="logo-link">Web<span class="logo-header">Studio</span></a>
       <ul class="site-nav list">
-        <li> <a href="/index.html" class="link">Студія</a></li>
+        <li> <a href="./index.html" class="link">Студія</a></li>
         <li> <a href="./portfolio.html" class="link">Портфоліо</a></li>
         <li> <a href="" class="link">Контакти</a></li>
       </ul>
