--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     <ul class="list">
       <li>
         <!-- Посилання на адресу електронної пошти  -->
-        <a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a>
+        <a href="mailto:info@devstudio.com" class="contakts">info@devstudio.com</a>
       </li>
     
       <li>
         <!-- Посилання на телефонний номер -->
-        <a href="tel:+380961111111" class="tel">+38 096 111 11 11</a>
+        <a href="tel:+380961111111" class="contakts">+38 096 111 11 11</a>
       </li>
     </ul>
     
@@ -63,16 +63,16 @@
         </li>
       </ul>
     </section>
-    <section>
-      <h2 class="section">Чим ми займаємося</h2>
+    <section class="workspace">
+      <h2>Чим ми займаємося</h2>
         <ul class="list">
-          <li> <img src="./imeges/close-up-image-programer-working-his-desk-office.jpg.jpg" alt="Десктопні додатки"></li>
-          <li> <img src="./imeges/web-ui-designers-are-developing-application-smartphones-team-creators-is-working-interface-mobile-phones.jpg.jpg" alt="Смартфонні додатки"></li>
-          <li> <img src="./imeges/creative-artist-web-design-with-working-colour-selection-graphic-tablet.jpg.jpg" alt="Дизанерські додатки"></li>
+          <li> <img src="./imeges/programer-working.jpg" alt="Десктопні додатки"></li>
+          <li> <img src="./imeges/smartphones-creators-working-mobile-phones.jpg" alt="Смартфонні додатки"></li>
+          <li> <img src="./imeges/web-design-working-graphic-table.jpg" alt="Дизанерські додатки"></li>
         </ul>
       </section>
-    <section>
-      <h2 class="section">Наша команда</h2>
+    <section class="workspace">
+      <h2>Наша команда</h2>
         <ul class="list">
           <li> 
             <img src="./imeges/prodact-designer.jpg" alt="Дизайнер продукту" width="270" height="260">
@@ -102,15 +102,17 @@
     </section>
   </main>
   <footer>
-    <a href="/index.html" lang="en" class="logo-link">Web<span class="logo-header">Studio</span></a>
-    <address>
-      <ul class="list">
-        <li><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer">м. Київ, пр-т Лесі Українки,
-          26</a></li>
-        <li><a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a> </li>
-        <li><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></li>
-      </ul>
-    </address>
+    <section class="footer">
+      <a href="./index.html" lang="en" class="logo-link">Web<span class="logo-footer">Studio</span></a>
+      <address>
+        <ul class="list">
+          <li><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer">м. Київ, пр-т Лесі Українки,
+            26</a></li>
+          <li><a href="mailto:info@devstudio.com" class="contakts">info@devstudio.com</a> </li>
+          <li><a href="tel:+380961111111" class="contakts">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
+    </section>
   </footer>
 </body>
 </html>
