--- a/index.html
+++ b/index.html
@@ -63,16 +63,16 @@
         </li>
       </ul>
     </section>
-    <section class="workspace">
-      <h2>Чим ми займаємося</h2>
+    <section>
+      <h2 class="workspace">Чим ми займаємося</h2>
         <ul class="list">
           <li> <img src="./imeges/programer-working.jpg" alt="Десктопні додатки"></li>
           <li> <img src="./imeges/smartphones-creators-working-mobile-phones.jpg" alt="Смартфонні додатки"></li>
           <li> <img src="./imeges/web-design-working-graphic-table.jpg" alt="Дизанерські додатки"></li>
         </ul>
-      </section>
-    <section class="workspace">
-      <h2>Наша команда</h2>
+    </section>
+    <section>
+      <h2 class="workspace">Наша команда</h2>
         <ul class="list">
           <li> 
             <img src="./imeges/prodact-designer.jpg" alt="Дизайнер продукту" width="270" height="260">
