--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
           <li>
             <a href="">
               <img src="./imeges/project-technocrat.jpg" alt="Проєкт технокряк" width="370" height="294">
-              <p class="name-title">Технокряк</p>
+              <h2 class="name-title">Технокряк</h2>
               <p class="work">Веб-сайт</p>
             </a>
           </li>
@@ -65,7 +65,7 @@
             <a href="">
               <img src="./imeges/poster-new-orlean-vs-golden-star.jpg" alt=" Постер Новий Орлеан проти Золотої Зірки" width="370"
                 height="294">
-              <p class="name-title" lang="en">Постер New Orlean vs Golden Star</p>
+              <h2 class="name-title" lang="en">Постер New Orlean vs Golden Star</h2>
               <p class="work">Дизайн</p>
             </a>
           </li>
@@ -73,7 +73,7 @@
           <li>
             <a href="">
               <img src="./imeges/restaurant-seafood.jpg" alt="Ресторан Мореродуктів" width="370" height="294">
-              <p class="name-title" lang="en">Ресторан Seafood</p>
+              <h2 class="name-title" lang="en">Ресторан Seafood</h2>
               <p class="work">Додаток</p>
             </a>
           </li>
@@ -81,7 +81,7 @@
           <li>
             <a href="">
               <img src="./imeges/eairphone.jpg" alt="Навушники" width="370" height="294">
-              <p class="name-title" lang="en">Проєкт Prime</p>
+              <h2 class="name-title" lang="en">Проєкт Prime</h2>
               <p class="work">Маркетинг</p>
             </a>
           </li>
@@ -89,7 +89,7 @@
           <li>
             <a href="">
               <img src="./imeges/boxes.jpg" alt="Коробки" width="370" height="294">
-              <p class="name-title" lang="en">Проєкт Boxes</p>
+              <h2 class="name-title" lang="en">Проєкт Boxes</h2>
               <p class="work">Додаток</p>
             </a>
           </li>
@@ -97,7 +97,7 @@
           <li>
             <a href="">
               <img src="./imeges/monitor.jpg" alt="Монітор комп'ютера" width="370" height="294">
-              <p class="name-title" lang="en">Inspiration has no Borders</p>
+              <h2 class="name-title" lang="en">Inspiration has no Borders</h2>
               <p class="work">Веб-сайт</p>
             </a>
           </li>
@@ -105,7 +105,7 @@
           <li>
             <a href="">
               <img src="./imeges/open-book.jpg" alt="Відкрита книга" width="370" height="294">
-              <p class="name-title" lang="en">Видання Limited Edition</p>
+              <h2 class="name-title" lang="en">Видання Limited Edition</h2>
               <p class="work">Дизайн</p>
             </a>
           </li>
@@ -113,7 +113,7 @@
           <li>
             <a href="">
               <img src="./imeges/label.jpg" alt="Бірка" width="370" height="294">
-              <p class="name-title" lang="en">Проєкт LAB</p>
+              <h2 class="name-title" lang="en">Проєкт LAB</h2>
               <p class="work">Маркетинг</p>
             </a>
           </li>
@@ -121,7 +121,7 @@
           <li>
             <a href="">
               <img src="./imeges/working-on-laptop.jpg" alt="Робота за ноутбуком" width="370" height="294">
-              <p class="name-title" lang="en">Growing Business</p>
+              <h2 class="name-title" lang="en">Growing Business</h2>
               <p class="work">Додаток</p>
             </a>
           </li>
